--- a/adm/upstart/beanstalkd.conf
+++ b/adm/upstart/beanstalkd.conf
@@ -6,4 +6,4 @@ stop on runlevel [!2345]
 respawn
 respawn limit 5 2
 
-exec su nobody -c 'exec /usr/local/bin/beanstalkd'
+exec start-stop-daemon --start -c beanstalkd --exec /usr/local/bin/beanstalkd
