use /etc/default/beanstalkd

--- a/adm/upstart/beanstalkd.conf
+++ b/adm/upstart/beanstalkd.conf
@@ -6,4 +6,9 @@ stop on runlevel [!2345]
 respawn
 respawn limit 5 2
 
-exec start-stop-daemon --start -c beanstalkd --exec /usr/local/bin/beanstalkd
+script
+  BEANSTALKD_LISTEN_ADDR=0.0.0.0
+  BEANSTALKD_LISTEN_PORT=11300
+  [ -f /etc/default/beanstalkd ] && . /etc/default/beanstalkd
+  exec start-stop-daemon --start -c beanstalkd --exec /usr/local/bin/beanstalkd -l $BEANSTALKD_LISTEN_ADDR -p $BEANSTALKD_LISTEN_PORT $BEANSTALKD_EXTRA
+end script
