fixing daemon options

--- a/adm/upstart/beanstalkd.conf
+++ b/adm/upstart/beanstalkd.conf
@@ -10,5 +10,6 @@ script
   BEANSTALKD_LISTEN_ADDR=0.0.0.0
   BEANSTALKD_LISTEN_PORT=11300
   [ -f /etc/default/beanstalkd ] && . /etc/default/beanstalkd
-  exec start-stop-daemon --start -c beanstalkd --exec /usr/local/bin/beanstalkd -l $BEANSTALKD_LISTEN_ADDR -p $BEANSTALKD_LISTEN_PORT $BEANSTALKD_EXTRA
+  DAEMON_OPTS="-l $BEANSTALKD_LISTEN_ADDR -p $BEANSTALKD_LISTEN_PORT $BEANSTALKD_EXTRA"
+  exec start-stop-daemon --start -c beanstalkd --exec /usr/local/bin/beanstalkd -- $DAEMON_OPTS
 end script
